@@ -9,6 +9,7 @@ svn update
 rm hudson.war || true
 
 tag=hudson-$(show-pom-version pom.xml | sed -e "s/-SNAPSHOT//g" -e "s/\\./_/g")
+export MAVEN_OPTS="-Xmx512m -XX:MaxPermSize=128m"
 mvn -B -Dtag=$tag release:prepare || mvn -B -Dtag=$tag install release:prepare
 mvn release:perform
 
